[metadata]
name = kimoby
version = 0.0.1
author = Régis Tremblay Lefrançois
author_email = regg00@gmail.com
description = Python module to interact with the Kimoby REST API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/regg00/kimoby
project_urls =
    Bug Tracker = https://github.com/regg00/kimoby/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src